@startuml

title __LOGIN's Class Diagram__\n

  namespace com.fyp {
    namespace login {
      class com.fyp.login.MTLogin {
          {static} # IS_SAVE_ACCOUNT : boolean
          # btGo : Button
          # cb_saveAccount : CheckBox
          # cv : CardView
          # etPassword : EditText
          # etStudentID : EditText
          # fab : FloatingActionButton
          # tv_forgetPassword : TextView
          ~ validator : Validator
          + onValidationFailed()
          + onValidationSucceeded()
          # onCreate()
          # onRestart()
          # onResume()
          - Login()
          - initValidator()
          - initView()
          - setListener()
      }
    }
  }
  

  namespace com.fyp {
    namespace login {
      class com.fyp.login.MTLoginLecturer {
          {static} # IS_SAVE_ACCOUNT : boolean
          # btGo : Button
          # cb_saveAccount : CheckBox
          # cv : CardView
          # etLecturerID : EditText
          # etPassword : EditText
          # fab : FloatingActionButton
          # tv_forgetPassword : TextView
          ~ validator : Validator
          + onValidationFailed()
          + onValidationSucceeded()
          # onCreate()
          # onRestart()
          # onResume()
          - Login()
          - initValidator()
          - initView()
          - setListener()
      }
    }
  }
  

  namespace com.fyp {
    namespace login {
      class com.fyp.login.MTRegister {
          ~ validator : Validator
          - btn_next : Button
          - cvAdd : CardView
          - et_reg_password : EditText
          - et_reg_repeatPassword : EditText
          - et_reg_student_ID : EditText
          - et_reg_student_name : EditText
          - fab : FloatingActionButton
          + animateRevealClose()
          + animateRevealShow()
          + onBackPressed()
          + onValidationFailed()
          + onValidationSucceeded()
          # onCreate()
          - ShowEnterAnimation()
          - initValidator()
          - initView()
          - register()
      }
    }
  }
  

  namespace com.fyp {
    namespace login {
      class com.fyp.login.MTRegisterLecturer {
          ~ validator : Validator
          - btn_next : Button
          - cvAdd : CardView
          - et_reg_password : EditText
          - et_reg_repeatPassword : EditText
          - et_reg_student_ID : EditText
          - et_reg_student_name : EditText
          - fab : FloatingActionButton
          + animateRevealClose()
          + animateRevealShow()
          + onBackPressed()
          + onValidationFailed()
          + onValidationSucceeded()
          # onCreate()
          - ShowEnterAnimation()
          - initValidator()
          - initView()
          - register()
      }
    }
  }
  

  namespace com.fyp {
    namespace login {
      class com.fyp.login.SignAsActivity {
          ~ btn_logInAsLecturer : Button
          ~ btn_logInAsStudent : Button
          + onRequestPermissionsResult()
          # onCreate()
          - getLastKnownLocation()
          - getLocation()
          - getLocationLL()
      }
    }
  }
  

  com.fyp.login.MTLogin .up.|> com.mobsandgeeks.saripaar.Validator.ValidationListener
  com.fyp.login.MTLogin -up-|> androidx.appcompat.app.AppCompatActivity
  com.fyp.login.MTLoginLecturer .up.|> com.mobsandgeeks.saripaar.Validator.ValidationListener
  com.fyp.login.MTLoginLecturer -up-|> androidx.appcompat.app.AppCompatActivity
  com.fyp.login.MTRegister .up.|> com.mobsandgeeks.saripaar.Validator.ValidationListener
  com.fyp.login.MTRegister -up-|> androidx.appcompat.app.AppCompatActivity
  com.fyp.login.MTRegisterLecturer .up.|> com.mobsandgeeks.saripaar.Validator.ValidationListener
  com.fyp.login.MTRegisterLecturer -up-|> androidx.appcompat.app.AppCompatActivity
  com.fyp.login.SignAsActivity -up-|> androidx.appcompat.app.AppCompatActivity


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
